add call to scale cluster node count
